# self-recog-as-optim

./: .gitignore  .pre-commit-config.yaml  README.md  env.yml  pyproject.toml  setup.cfg
run/: analysis.py  evolution.py  evolution_playback.py
src/self_recog_as_optim/: __init__.py  network.py  simulation.py
