# Find out more about setup.cfg and what options are available here:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = self_recog_as_optim
description = Code replicating experiments from the ALIFE 2022 extended abstract "Self recognition as optimisation"
long_description = file: README.md
author = Timothy Atkinson
author_email = timothy@nnaisense.com
keywords = python
license = MIT Licence
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Utilities
	Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
package_dir =
    =src
packages = find:
tests_require =
    self_recog_as_optim[test]
install_requires =
    numpy
    pygame
    matplotlib
    scipy

[options.package_data]
* = *.txt, *.md, *.rst

[options.packages.find]
where = src

[options.extras_require]
# Development dependencies
dev =
    black
    flake8
    isort
    pre-commit

[mypy]
files=src/**/*.py, run/*.py, test/*.py
ignore_missing_imports=true

[flake8]
extend-exclude = src/self_recog_as_optim/__version.py
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203, E266, E231, E501, W503, F403
